fixed: correct some bug and readable code

--- a/src/renderer/components/ui/catalog/FilledButton/FilledButton.module.scss
+++ b/src/renderer/components/ui/catalog/FilledButton/FilledButton.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
     width: 100%;
-    height: 3.5rem;
-    padding: .2rem;
+    padding: 0.2rem;
     border-radius: 1rem;
 }
 
